# yabul

./: .gitignore  .travis.yml  README.md  requirements.txt  setup.cfg  setup.py
docs/: conf.py  index.rst  requirements.txt
test/: test_align.py  test_fasta.py
test/data/: cov2.fasta  protein.fasta  transcripts.fasta
yabul/: __init__.py  align.py  fasta.py
