[metadata]
# replace with your username:
name = yabul
version = attr: yabul.__version__
author = Tim O'Donnell
author_email = timodonnell@gmail.com
description = Yet Another Bioinformatics Utilities Library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/timodonnell/yabul
project_urls =
    Bug Tracker = https://github.com/timodonnell/yabul/issues
classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=2.7